--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL='http://www.ieee-juit.com/'" />
     <title>IEEE Intro Site</title>
         <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
 
-    <CENTER><BR><BR>
-    <IMG src="http://robotsapp.spectrum.ieee.org/ieeelogo6.png"> <BR><BR>
-    <A href="https://bashcloud.github.io/webintro" target="_blank">
-      <DIV class="button" id="presentation">Introduction to the Web Technologies</DIV></A>
-    <A href="https://dhriti2.typeform.com/to/yI2u8y" target="_blank">
-      <DIV class="button" id="feedback">Click here to Give Feedback</DIV></A>
-    <BR><BR>
-    <DIV id="footer"> <HR>Copyright &#xA9; IEEE-JUITSB 2016</DIV>
-</CENTER>
   </body>
 </html>
