Main Redirection Modified to /Home

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='http://www.ieee-juit.com/'" />
+    <meta http-equiv="refresh" content="0; URL='http://www.ieeejuit.in/Home'" />
     <title>IEEE Intro Site</title>
         <link rel="stylesheet" href="style.css">
   </head>
